--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "mobile-chat-agent",
+  "name": "PhoneGenie",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
+    "start:regular": "next start",
     "lint": "next lint"
   },
   "dependencies": {
