--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,7 @@ next-env.d.ts
 # local development files
 *.local.md
 STATUS*.md
-TEST_RESULTS.md
-BUILD_FIX.md
-OPTIMIZATION_REPORT.md
 
+# documentation (keep locally only)
+docs/
 
